carousel image overlapping fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,11 @@ a {
   .card .text-container {
     text-align: center; }
 
+.blank_card {
+  background-color: white;
+  width: 100%;
+  height: 100%; }
+
 header .header-advertising {
   background: #f0d480;
   font-size: 1.4rem;
